kubernetes/applications/websites/whoami/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
      - name: whoami-container
        image: containous/whoami
        resources:
          requests:
            memory: "1Mi"
          limits:
            memory: "1Mi"
        ports:
          - name: web
            containerPort: 80
